implement full CRUD of chitalishta and info cards